tests/semantic/invalid/invalid_remainder.mc
float amount = 2.0;
int remainder = amount % 2;
